# tradingbot

./: .env.example  .gitignore  CLAUDE.md  CODE_SCAN_IMPROVEMENTS.md  ENHANCEMENTS_COMPLETE.md  FILE_PERSISTENCE_GUIDE.md  INTEGRATION_GUIDE_RSS.md  PHASE2_GUIDE.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE_4C_RSS_FINAL_VERIFICATION.py  PRE_PUSH_CHECKLIST.md  Procfile  README.md  RSS_FEEDS_COMPLETION_REPORT.md  RSS_FEEDS_SUMMARY.md  SCORING_METHODOLOGY.md  SMART_MONEY_TRACKING.md  analysis.ipynb  demo_phase7.py  demo_rss_feeds.py  demo_smart_money_tracking.py  diag_outcomes.py  diagnostic.py  diff_review.txt  diff_review2.txt  diff_review3.txt  drop_short_records.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  test_output.txt  test_telegram.py
config/: broker.example.yaml  indicators.yaml  risk.yaml  scanner.yaml  schedule.yaml
docs/: AI_INTEGRATION.md  ALGORITHM.md  CLOUD_DEPLOYMENT.md  COMPLETE_ANALYSIS_REPORT.md  EXECUTION_ENGINE_PLAN.md  IMPROVEMENTS.md  OPERATIONS.md  TASK_SCHEDULER.md  create_trade_outcomes_table.sql
outputs/: ENHANCED_PLAYBOOK_DEMO.md  alerts.jsonl  catalyst_scores.json  smart_money_signals_midday.json  smart_money_signals_morning.json
scripts/: cloud_preflight.ps1  deploy_vps.sh  ibgw_health_check.sh  run_close.ps1  run_midday.ps1  run_morning.ps1  run_news.ps1  scan_watchdog.sh  setup_scheduler.ps1  tradingbot-commands.service  vps_crontab.txt  vps_crontab_ibkr.txt  vps_scan.sh  vps_setup.sh
tests/: test_alert_store_weekend.py  test_analysis_modules.py  test_apr_fixes.py  test_audit_fixes.py  test_card_builder.py  (+27 more)
(+100 files in other folders)
